Устранение некоторых ошибок, отладка подписки